SD-67: Fixed header fonts and spacing

--- a/client-server/src/app/components/carousel/carousel.component.sass
+++ b/client-server/src/app/components/carousel/carousel.component.sass
@@ -70,6 +70,7 @@
           bottom: 8px
           left: 16px
           color: white
+          text-shadow: 1px 1px #000
           font-size: 18px
           font-weight: 700
       .carousel-cell-cards
